Dlq cursor reset (#1574)
Zalando ticket : ARUHA-1531